# raytracer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  main.py  pyproject.toml
futures/: cprofile.md  profiling.md
raytracer/: color.py  hittable.py  ray.py  sphere.py  utils.py  vec3.py
