[project]
name = "raytracer"
version = "0.1.0"
description = "an raytracer implementation in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
]

[tool.ruff.lint]
extend-select = ["B"]


[dependency-groups]
dev = [
    "memory-profiler>=0.61.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
]
